# spell-checker

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  dictionary.cpp  dictionary.hpp  levenshtein.cpp  levenshtein.hpp  main.cpp
src/trie/: CMakeLists.txt  trie.cpp  trie.hpp  trie_node.cpp  trie_node.hpp
